Bug 509484 - Near-constant crashes while scrolling
Summary: Near-constant crashes while scrolling
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Flatpak Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-09-14 11:08 UTC by Nate Graham
Modified: 2025-10-08 13:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-09-14 11:08:20 UTC
STEPS TO REPRODUCE
1. Use nightly Flatpack version of NeoChat (https://cdn.kde.org/flatpak/neochat-nightly/org.kde.neochat.flatpakref)
2. Log in and enter a room with a lot of history
3. Scroll up and down using a two-finger scroll on a touchpad


OBSERVED RESULT
After a few seconds, NeoChat crashes with this backtrace:

#0  0x00007fe7499441ed in QQuickPopup::overlayEvent(QQuickItem*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6QuickTemplates2.so.6
#1  0x00007fe7499391a8 in QQuickOverlay::eventFilter(QObject*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6QuickTemplates2.so.6
#2  0x00007fe74c1a7dfe in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#3  0x00007fe74d5a181d in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Widgets.so.6
#4  0x00007fe74c1a80a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#5  0x00007fe74ca02343 in QGuiApplicationPrivate::processWheelEvent(QWindowSystemInterfacePrivate::WheelEvent*) () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
#6  0x00007fe74ca7207c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
#7  0x00007fe74ca72290 in QWindowSystemInterface::flushWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
#8  0x00007fe74c212538 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#9  0x00007fe74c4d11eb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#10 0x00007fe74c1b5da3 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#11 0x00007fe74c1b1201 in QCoreApplication::exec() () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#12 0x000055e687fdd749 in ??? ()
#13 0x00007fe74ba2b3c8 in __libc_start_call_main () at /usr/lib/x86_64-linux-gnu/libc.so.6
#14 0x00007fe74ba2b48b in __libc_start_main () at /usr/lib/x86_64-linux-gnu/libc.so.6
#15 0x000055e688113b35 in ??? ()
(gdb) 


EXPECTED RESULT
No crash


SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-09-13
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 16 GiB of RAM (14.9 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics


ADDITIONAL INFORMATION
Feels like it happens when a pointer specifically is passing over one of the hover buttons. Just a feeling though.

Unfortunately this crash is so common that I've had to switch to Element for the time being.

It started happening shortly before Akademy 2025, and I'm only now getting the time to report it. So maybe sometime around September 1st through 4th.
Comment 1 Tobias Fella 2025-10-01 21:41:12 UTC
Setting to confirmed since there's a bunch of sentry reports; unfortunately, i still can't reproduce it myself
Comment 2 Bug Janitor Service 2025-10-02 19:14:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/2497
Comment 3 Tobias Fella 2025-10-08 13:07:07 UTC
Git commit 7356a68f4c4ec6a6ce349959766e458149ea4840 by Tobias Fella, on behalf of James Graham.
Committed on 08/10/2025 at 13:07.
Pushed by tfella into branch 'master'.

Hopefully this stops any crashes around QuickActions.qml and EmojiDialog.qml

Hopefully this stops any crashes around QuickActions.qml and EmojiDialog.qml. Best I can guess this is some race condition where QuickActions are deleted in the time it takes to instnatiate the EmojiDialog popup. I've also rearranged the updateQuickActions function to stop a possible race condition there.

M  +1    -1    src/timeline/QuickActions.qml
M  +36   -27   src/timeline/messagedelegate.cpp

https://invent.kde.org/network/neochat/-/commit/7356a68f4c4ec6a6ce349959766e458149ea4840